# TODO

./: .gitignore  CMakeLists.txt  README.md  install.sh  meson.build
.cache/clangd/index/: gui.cpp.BFCA68854A361E29.idx  gui.h.77CFA6E99E6FC5ED.idx  gui.hpp.6166B8E149AFB58F.idx  main.cpp.BA7B1E50FE6C5782.idx  sqlite.cpp.61A6C5B23A9B29A3.idx  sqlite.h.6560C523B01114F5.idx
data/: migrations.sql  todo.desktop
include/: gui.h  sqlite.h
includes/: gui.h  sqlite.h
resources/: gresource.xml  todo.db
src/: gui.cpp  gui.hpp  main.cpp  sqlite.cpp
